name:                eta-midi-player
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Brian McKenna
maintainer:          brian@brianmckenna.org
category:            Sound
build-type:          Simple
cabal-version:       >=1.10

executable eta-midi-player
  main-is:             Main.hs
  build-depends:       base >=4.11 && <4.12, eta-java-interop
  default-language:    Haskell2010
